--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mongoose": "^8.9.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^22.10.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
